--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Scrollama: Asian Charactors</title>
     <meta name="description" content="Scrollama: Sticky Overlay Example" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="style.css" />
+    <!-- <link rel="stylesheet" href="style.css" /> -->
     <style>
       #scrolly {
         position: relative;
