--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         // update graphic based on step
         sticky.querySelector("p").innerText = el.dataset.step;
         sticky.style.backgroundColor = el.dataset.color;
-        //tuika
+        //image
         sticky.style.backgroundImage = el.dataset.image;
       }
 
