--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         background-color: #f3f3f3;
         padding: 1rem;
       }
-
+      
       article {
         position: relative;
         padding: 0;
@@ -110,10 +110,8 @@
           <div class="step" data-step="4" data-color="white" data-image="url('images/downtown-cityscape-night-seoul-south-korea.jpg')">
             <p>이것은 한글입니다</p>
             <p>The Korean language uses the phonetic Hangul alphabet. Like Japanese, there are many words that can be written in Chinese characters.</p>
-          <!-- <div class="step" data-step="5" data-color="white" data-image="url('images/wat-arun-temple-twilight-bangkok-thailand.jpg')">
-            <p>นี่คือสคริปต์ภาษาไทย</p>
-          <div class="step" data-step="6" data-color="white" data-image="url('images/elephant')">
-            <p>මේක සිංහල</p>          -->
+          <div class="step" data-step="5" data-color="white" data-image="url('images/wat-arun-temple-twilight-bangkok-thailand.jpg')">
+            <p></p>     
           </div>
         </article>
       </section>
