--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         color: #3b3b3b;
       }
       .step p {
-        text-align: center;
+        text-align: left;
         padding: 1rem;
         font-size: 1.5rem;
         background-color: #3b3b3b88;
@@ -103,15 +103,19 @@
             <p>這是繁體中文</p>
             <p>People in Hong Kong and Taiwan use traditional Chinese characters. These have more strokes than simplified characters. We can find these in New York City's Chinatown as well.</p>
           </div>
-          <div class="step" data-step="3" data-color="grey" data-image="url('images/aerial-view-tokyo-cityscape-with-fuji-mountain-japan.jpg')">
+
+          <div class="step" data-step="3" data-color="white" data-image="url('images/downtown-cityscape-night-seoul-south-korea.jpg')">
+            <p>이것은 한글입니다</p>
+            <p>The Korean language uses the phonetic Hangul alphabet. Like Japanese, there are many words that can be written in Chinese characters.</p>
+          </div>
+
+          <div class="step" data-step="4" data-color="grey" data-image="url('images/aerial-view-tokyo-cityscape-with-fuji-mountain-japan.jpg')">
             <p>これは日本語です</p>
             <p>The Japanese language has three types of characters. Kanji, which come from China, and Hiragana and Katakana, which are phonetic characters.</p>
           </div>
-          <div class="step" data-step="4" data-color="white" data-image="url('images/downtown-cityscape-night-seoul-south-korea.jpg')">
-            <p>이것은 한글입니다</p>
-            <p>The Korean language uses the phonetic Hangul alphabet. Like Japanese, there are many words that can be written in Chinese characters.</p>
+
           <div class="step" data-step="5" data-color="white" data-image="url('images/wat-arun-temple-twilight-bangkok-thailand.jpg')">
-            <p></p>     
+            <p>aaaaaa</p>     
           </div>
         </article>
       </section>
