--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
           <div class="step" data-step="4" data-color="grey" data-image="url('images/aerial-view-tokyo-cityscape-with-fuji-mountain-japan.jpg')">
             <p>これは日本語です</p>
-            <p>The Japanese language has three types of characters. Kanji, which come from China, and Hiragana and Katakana, which are phonetic characters.</p>
+            <p>The Japanese language has three types of characters. Kanji, which come from China, and phonetic Hiragana and Katakana characters.</p>
           </div>
 
           <div class="step" data-step="5" data-color="white" data-image="url('images/wat-arun-temple-twilight-bangkok-thailand.jpg')">
